--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Policies against urban sprawl
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Research project by Dmitry Boyko in alliance with the ARL – Academy for Territorial Development in the Leibniz Association supported by the Alexander von Humboldt Foundation’s German Chancellor Fellowship Program
 baseurl: "/username" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
