--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ title: Policies against urban sprawl
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Research project by Dmitry Boyko in alliance with the ARL – Academy for Territorial Development in the Leibniz Association supported by the Alexander von Humboldt Foundation’s German Chancellor Fellowship Program
-baseurl: "/username" # the subpath of your site, e.g. /blog
+baseurl: "/pause" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+facebook_pause: pause
+github_pause:  boikod
 
 # Build settings
 markdown: kramdown
