--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: PAUSE
-email: boyko@arl-net.de
+email: dmitry.boyko@arl-net.de
 description: >- # this means to ignore newlines until "baseurl:"
   Research project by Dmitry Boyko in alliance with the ARL – Academy for Territorial Development in the Leibniz Association supported by the Alexander von Humboldt Foundation’s German Chancellor Fellowship Program
 baseurl: "/" # the subpath of your site, e.g. /blog
